docs: update reference to old radix3 link
unjs/radix3 has been moved to a separate branch of unjs/rou3.
This change updates the reference to the old unjs/radix3 repo in the Nitro docs to the new branch of unjs/rou3.

--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -281,7 +281,7 @@ This behaviour can be overridden by some request properties (eg.: `Accept` or `U
 
 Nitro allows you to add logic at the top-level for each route of your configuration. It can be used for redirecting, proxying, caching and adding headers to routes.
 
-It is a map from route pattern (following [unjs/radix3](https://github.com/unjs/radix3#route-matcher)) to route options.
+It is a map from route pattern (following [unjs/radix3](https://github.com/unjs/rou3/tree/radix3#route-matcher)) to route options.
 
 When `cache` option is set, handlers matching pattern will be automatically wrapped with `defineCachedEventHandler`. See the [cache guide](/guide/cache) to learn more about this function.
 
