--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -328,7 +328,7 @@ export default defineNitroErrorHandler((error, event) => {
 
 **🧪 Experimental!**
 
-Route options. It is a map from route pattern (following [unjs/radix3](https://github.com/unjs/radix3#route-matcher)) to route options.
+Route options. It is a map from route pattern (following [unjs/radix3](https://github.com/unjs/rou3/tree/radix3#route-matcher)) to route options.
 
 When `cache` option is set, handlers matching pattern will be automatically wrapped with `defineCachedEventHandler`.
 
