docs: fix typos

--- a/docs/1.guide/1.utils.md
+++ b/docs/1.guide/1.utils.md
@@ -4,7 +4,7 @@ icon: ri:tools-line
 
 # Server Utils
 
-> Enjoy auto imported server utils and extend with your own utils.
+> Enjoy auto-imported server utils and extend with your own utils.
 
 ## Auto imports
 
@@ -13,7 +13,7 @@ It is because Nitro uses [unjs/unimport](https://github.com/unjs/unimport) to au
 
 ## H3 utils
 
-Nitro enables all [h3 utils](https://h3.unjs.io/utils) as auto imports so you can use `defineEventHandler`, `readBody`, etc without manually importing them.
+Nitro enables all [h3 utils](https://h3.unjs.io/utils) as auto imports so you can use `defineEventHandler`, `readBody`, etc. without manually importing them.
 
 ::read-more{title="H3 Docs" to="https://h3.unjs.io/utils"}
 ::
@@ -21,7 +21,7 @@ Nitro enables all [h3 utils](https://h3.unjs.io/utils) as auto imports so you ca
 
 ### `utils` directory
 
-You can add your application specific utils inside `utils/` directory and they will be auto imported when used.
+You can add your application specific utils inside `utils/` directory and they will be auto-imported when used.
 Every export in the `utils` directory and its subdirectories will become available globally in your application.
 
 
@@ -63,7 +63,7 @@ Check [the source code](https://github.com/unjs/nitro/blob/v2/src/core/config/re
 ::
 
 ::read-more{to="/guide/typescript"}
-The types are auto generated for global auto-imports when running the `prepare` or `dev` command. See [TypeScript](/guide/typescript) guide, for IDE support.
+The types are auto-generated for global auto-imports when running the `prepare` or `dev` command. See [TypeScript](/guide/typescript) guide, for IDE support.
 ::
 
 ## Manual imports
